--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -10,3 +10,53 @@ body
 *
   margin: 0
   padding: 0
+
+.header-up
+	width: 100%
+	height: auto
+	background-color: #d24a43
+
+.brand-icon img
+	margin: 10px 0
+
+.navigation li
+	list-style: none
+	float: left
+
+.navigation a
+	color: #fff
+	text-decoration: none
+	font-size: 24px
+	margin: 0 10px
+	line-height: 3
+
+.navigation a:hover
+	cursor: pointer
+	transition-duration: 0.3s
+	border-bottom: 2px solid #fff
+	color: orange
+	padding: 5px 0
+
+.img-header img
+	width: 100%
+	height: auto
+
+
+.button-header
+	text-align: center
+
+@media screen and(max-width: 1199px)
+	.navigation li
+		float: none
+	.navigation a
+		margin: 0
+		line-height: 2
+		display: flex
+		justify-content: center
+	.navigation a:hover
+		border: 0
+		padding: 0
+	.brand-icon
+		text-align: center
+
+
