main-content_complete

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -11,6 +11,11 @@ body
   margin: 0
   padding: 0
 
+p
+	bottom: 0
+	padding: 0
+
+//Навигация и иконка
 .header-up
 	width: 100%
 	height: auto
@@ -40,11 +45,77 @@ body
 .img-header img
 	width: 100%
 	height: auto
-
-
+//Кнопка заказать
 .button-header
 	text-align: center
+	margin: 0 0 40px 0
 
+//Контент в главном меню
+.main
+	width: 100%
+	height: auto
+	background-color: #fb7d77
+.main-title h3
+	text-align: center
+	color: #FFF
+	margin: 0 0 10px 0
+.main-descrp p
+	text-align: center
+	color: #FFF
+
+//Контент на главн странице
+.content-title p
+	color: #fff
+	text-align: center
+	font-size: 18px
+.main-content
+	text-align: center
+	margin: 10px 0
+.content-img img
+	width: 200px
+	height: 250px
+	border-radius: 5%
+	box-shadow: 5px 2px 2px rgba(0,0,0,0.5)
+.content-descrp p
+	text-align: justify
+	margin: 10px 0
+	color: #fff
+.publsh-content p
+	color: #fff
+	text-align: left
+	margin: 0
+.date-publish p
+	color: #fff
+	text-align: left
+	margin: 0
+
+//Подвал
+.footer
+	width: 100%
+	height: auto
+	background-color: #2d2d2d
+.nav-footer
+	margin: 10px 0 0 0
+	color: #fff
+.nav-footer li
+	list-style: none
+	margin: 10px 0
+.nav-footer a
+	color: #fff
+	text-decoration: none
+.nav-footer a:hover
+	transition-duration: 0.3s
+	color: orange
+.social-button li
+	margin: 10px 0
+.social-button img
+	
+	
+
+
+
+
+//Адаптация под мобильные телефоны и планшеты
 @media screen and(max-width: 1199px)
 	.navigation li
 		float: none
