--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -88,6 +88,12 @@ p
 	color: #fff
 	text-align: left
 	margin: 0
+.fa-id-badge
+	color: #000
+	margin: 0 10px 0 0
+.fa-calendar
+	color: #000
+	margin: 0 10px 0 0
 
 //Подвал
 .footer
@@ -107,8 +113,10 @@ p
 	transition-duration: 0.3s
 	color: orange
 .social-button li
-	margin: 10px 0
-.social-button img
+	margin: 0 10px
+	float: left
+
+
 	
 	
 
@@ -129,5 +137,11 @@ p
 		padding: 0
 	.brand-icon
 		text-align: center
+	.nav-footer li
+		text-align: center
+	.social-button li
+		float: none
+		text-align: center
+		margin: 10px 0
 
 
