--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,6 +15,38 @@ p
 	bottom: 0
 	padding: 0
 
+body input:focus:required:invalid, body textarea:focus:required:invalid
+  color: red
+
+body input:required:valid, body textarea:required:valid
+  color: green
+
+.hidden
+  display: none
+
+/*Preloader*/
+.preloader
+	background: none repeat scroll 0 0 #fff
+	bottom: 0
+	height: 100%
+	left: 0
+	position: fixed
+	right: 0
+	top: 0
+	width: 100%
+	z-index: 9999
+	.loader
+		background-image: url('../img/spinner_frame_41600.gif')
+		background-size: cover
+		background-repeat: no-repeat
+		background-position: center center
+		height: 100px
+		width: 100px
+		margin-top: -30px
+		margin-left: -30px
+		left: 50%
+		top: 50%
+		position: absolute
 //Навигация и иконка
 .header-up
 	width: 100%
@@ -76,6 +108,9 @@ p
 	height: 250px
 	border-radius: 5%
 	box-shadow: 5px 2px 2px rgba(0,0,0,0.5)
+.content-img img:hover
+	transform: scale(1.2,1.2)
+	transition: .8s transform
 .content-descrp p
 	text-align: justify
 	margin: 10px 0
@@ -116,12 +151,175 @@ p
 	margin: 0 10px
 	float: left
 
+//Галерея
+.gallery
+	width: 100%
+	height: auto
+	background-color: #fb7d77
+.gallery-main-title
+	color: #fff
+	text-align: center
+	padding: 20px 0
+.img-gallery
+	text-align: center
+	border-radius: 5%
+	margin: 0 0 10px 0
+.img-gallery img
+	box-shadow: 3px 1px 1px rgba(0,0,0,0.5)
+.img-gallery img:hover
+	transform: scale(1.2,1.2)
+	transition: .8s transform
+.view-gallary
+	display: flex
+	justify-content: center
+.view-gallary p
+	padding: 10px 20px
+	background-color: #f14d44
+	color: #fff
+	margin: 0 0 30px 0
+	font-weight: bold
+	box-shadow: 3px 2px 1px rgba(0,0,0,0.5)
+.view-gallary p:hover
+	transition: all .8s
+	background-color: #fff
+	color: #f14d44
+	cursor: pointer
+	transform: scale(1.1)
 
-	
-	
+//Продукты
+.product
+	width: 100%
+	height: auto
+	background-color: #ff9cd0
+.main-title-product
+	color: #fff
+	text-align: center
+	padding: 20px 0
+.content-product
+	text-align: center
+.img-product img
+	border-radius: 5%
+	margin: 0 0 10px 0
+	box-shadow: 3px 1px 1px rgba(0,0,0,0.5)
+.img-product img:hover
+	transform: scale(1.1,1.1)
+	transition: .8s transform
+.name-product p
+	color: #fff
+	font-size: 18px
+	margin: 0
+.price-product
+	display: flex
+	justify-content: center
+.price-product p
+	padding: 10px 20px
+	background-color: #f14d44
+	color: #fff
+	margin: 10px 0 10px 0
+	font-weight: bold
+	box-shadow: 3px 2px 1px rgba(0,0,0,0.5)
+.buy-product
+	display: flex
+	justify-content: center
+.buy-product p
+	padding: 10px 32px
+	background-color: #ff00ff
+	color: #fff
+	margin: 0 0 30px 0
+	font-weight: bold
+	box-shadow: 3px 2px 1px rgba(0,0,0,0.5)
+.buy-product p:hover
+	background-color: #fff
+	color: #ff00ff
+	transition: all .8s
+	cursor: pointer
+.carousel-indicators
+  position: relative
+  padding: 50px 0 20px 0
+  z-index: 0
+.carousel-indicators .active
+  background-color: #fead00
+.carousel-indicators li
+  width: 8px
+  height: 8px
+  background-color: #d0d0d0
+
+//Контакты
+
+.contacts
+	width: 100%
+	height: auto
+	background-color: #a51dff
+.main-title-contact
+	color: #fff
+	text-align: center
+	padding: 20px 0
+.feedback-icon
+	text-align: center
+	margin: 0 0 40px 0
+.feedback-icon img
+	width: 32px
+	height: 32px
+.feedback-icon p
+	display: inline-block
+	color: #fff
+	margin-left: 15px
+
+/*Форма*/
+
+.row input, textarea
+	text-align: center
+	position: relative
+	left: 100%
+
+input
+	width: 100%
+	height: 100%
+	border: 2px solid #ccc
+	padding-top: 5px
+	padding-bottom: 5px
+	font-size: 18px
+	box-shadow: 4px 1px 1px rgba(0,0,0,0.5)
+input:focus
+	color:#95989A
+	transform: scale(1.1)
+textarea
+	border: 2px solid #ccc
+	width: 100%
+	height: 100%
+	margin: 20px 0 20px 0
+	font-size: 18px
+	box-shadow: 4px 1px 1px rgba(0,0,0,0.5)
+	resize: none
+textarea:focus
+	color:#95989A
+	transform: scale(1.1)
 
 
-
+/*Кнопка для формы*/
+.button
+	display: block;
+	text-align: center 
+	margin: 0 auto 40px auto
+	color: #fff
+	background: #f14d44
+	border: none
+	box-shadow: 4px 1px 1px rgba(0,0,0,0.5)
+	padding: 10px 20px
+	font-size: 16px
+	font-weight: bold
+.button:hover
+	transform: scale(1.1)
+	color: #f14d44
+	background: #fff
+	border: none
+	transition: all 0.8s
+.button:focus
+	transform: scale(1.1)
+	color: #f14d44
+	background: #fff
+	border: none
+	transition: all 0.8s
 
 //Адаптация под мобильные телефоны и планшеты
 @media screen and(max-width: 1199px)
@@ -143,5 +341,10 @@ p
 		float: none
 		text-align: center
 		margin: 10px 0
+	.row input, textarea
+		text-align: center
+		position: relative
+		left: 0
+		top: 0
 
 
